--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <i class="fa fa-paint-brush" aria-hidden="true"></i>
           <h3>"Between Heaven and Hell"</h3>
           <p class="gray"><a href="https://en.wikipedia.org/wiki/Hieronymus_Bosch"
-          target="_blank"><small><strong>Click here</strong> to read more about his life and work</small></a></p>
+          target="_blank"><small><strong>Click here</strong> to read about his life and work</small></a></p>
         </div>
       </div>
         <div id="columnOrganizer">
