--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <body>
     <main>
       <div id="two-column" class="fade-in" style="background-image: url('images/HieronymusBosch.jpg');
-        background-position: center; background-size: cover; background-repeat: no-repeat; background-attachment: fixed">
+        background-position: center; background-size: cover; background-repeat: no-repeat; background-attachment: fixed;
+        height: 100vh">
         <div id="img-div"><img src="images/HieronymusBosch.jpg" id="image img-caption" alt="Hieronymus Bosch"><h5>Hieronymus Bosch, one of the greatest artists of the Northern Renaissance</h5></div>
         <div id="title">
           <p>Tribute page<span class="tooltip"><sup><i class="fa fa-info-circle" aria-hidden="true"></i></sup>
