--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </li><br>
             <li>
               <span><h4><a href="https://en.wikipedia.org/wiki/The_Seven_Deadly_Sins_and_the_Four_Last_Things" target="_blank"><strong>Tabletop of the Seven Deadly Sins and the Four Last Things</strong></a></h4>
-              <img src="images/The Seven Deadly Sinss.jpg" class="fade-in" alt="The Seven Deadly Sins and the Four Last Things">
+              <img src="images/The Seven Deadly Sinss.jpg" class="fade-in" alt="The Seven Deadly Sins">
               <h5><a href="https://www.museodelprado.es/en/the-collection/art-work/table-of-the-seven-deadly-sins/3fc0a84e-d77d-4217-b960-8a34b8873b70" target="_blank">- Museo del Prado, Madrid -</a></h5></span>
             </li><br>
             <li>
